Fix alignment to link for signup/login

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -18,5 +18,4 @@ a {
     opacity: 0.4;
     color: black;
     text-decoration: underline;
-    margin: 37.5%;
 }
